--- a/src/components/HomepageFeatures/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures/HomepageFeatures.module.css
@@ -5,11 +5,6 @@
   width: 100%;
 }
 
-.featureSvg {
-  height: 200px;
-  width: 200px;
-}
-
 .featureImage {
   height: 160px;
   width: 160px;
